[package]
name = "learningGameInRust"
version = "0.1.0"
edition = "2021"
authors = ["Chris <christophehenry11@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.18.0"
specs-derive = "0.4.1"
rand = "0.8.5"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image"]
